--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,27 +11,57 @@ environment:
     SDL_AUDIODRIVER: "disk"
 
   matrix:
-    - PYTHON: "C:\\Python27"
+    - PYTHON: "pypy.exe"
       PYTHON_VERSION: "2.7.13"
       PYTHON_ARCH: "32"
+      PYPY_VERSION: "pypy2-v5.10.0-win32"
+
+    - PYTHON: "pypy3.exe"
+      PYTHON_VERSION: "2.7.13"
+      PYTHON_ARCH: "32"
+      PYPY_VERSION: "pypy3-v5.10.1-win32"
+
+    - PYTHON: "C:\\Python27\\python"
+      PYTHON_VERSION: "2.7.13"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python35\\python"
+      PYTHON_VERSION: "3.5.2"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python36\\python"
+      PYTHON_VERSION: "3.6.0"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python27-x64\\python"
+      PYTHON_VERSION: "2.7.13"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python35-x64\\python"
+      PYTHON_VERSION: "3.5.2"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python36-x64\\python"
+      PYTHON_VERSION: "3.6.0"
+      PYTHON_ARCH: "64"
 
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
 
 install:
   - "powershell appveyor\\install.ps1"
+  - "powershell appveyor\\downloadpypy.ps1 -pypy_version PYPY_VERSION"
   - "set HOME=%APPVEYOR_BUILD_FOLDER%"
   - "set PATH=%PATH%;%APPVEYOR_BUILD_FOLDER%\\pypy2-v5.10.0-win32"
-  - pypy.exe -c "import platform;print(platform.python_implementation())"
-  - pypy.exe -m ensurepip
-  - pypy.exe -m pip install wheel
-  - "%WITH_COMPILER% pypy.exe config.py -auto"
-  - "%WITH_COMPILER% pypy.exe setup.py build"
-  - "%WITH_COMPILER% pypy.exe setup.py -setuptools %DISTRIBUTIONS%"
+  - "%PYTHON% -m ensurepip"
+  - "%PYTHON% -m pip install -U wheel pip"
+  - "%WITH_COMPILER% %PYTHON% config.py -auto"
+  - "%WITH_COMPILER% %PYTHON% setup.py build"
+  - "%WITH_COMPILER% %PYTHON% setup.py -setuptools %DISTRIBUTIONS%"
   - ps: "ls dist"
 
   # Install the wheel to test it
-  - pypy.exe -m pip install --ignore-installed --pre --no-index --find-links dist/ pygame"
+  - "%PYTHON% -m pip install --ignore-installed --pre --no-index --find-links dist/ pygame"
 
 # Appveyor's build step is specific to .NET projects, so we build in the
 # install step instead.
@@ -40,7 +70,7 @@ build: off
 test_script:
   - "mkdir empty_folder"
   - "cd empty_folder"
-  - pypy.exe -m pygame.tests --exclude opengl"
+  - "%PYTHON% -m pygame.tests --exclude opengl"
 
   # Move back to the project folder
   - "cd .."
