--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,9 +50,9 @@ init:
 
 install:
   - "powershell appveyor\\install.ps1"
-  - "powershell appveyor\\downloadpypy.ps1 -pypy_version PYPY_VERSION"
+  - "powershell appveyor\\downloadpypy.ps1 -pypy_version %PYPY_VERSION%"
   - "set HOME=%APPVEYOR_BUILD_FOLDER%"
-  - "set PATH=%PATH%;%APPVEYOR_BUILD_FOLDER%\\pypy2-v5.10.0-win32"
+  - "set PATH=%PATH%;%APPVEYOR_BUILD_FOLDER%\\%PYPY_VERSION%"
   - "%PYTHON% -m ensurepip"
   - "%PYTHON% -m pip install -U wheel pip"
   - "%WITH_COMPILER% %PYTHON% config.py -auto"
