Use TWINE env vars for pypi upload.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,6 @@ matrix:
       python: 2.7
     - os: linux
       sudo: required
-      python: 3.4
-    - os: linux
-      sudo: required
       python: 3.5
     - os: linux
       sudo: required
@@ -36,6 +33,7 @@ matrix:
       env:
         - PY_VERSION=3
         - MAKEFLAGS=-j8
+        - UPLOAD_SDIST=1
     - os: osx
       osx_image: xcode7.3
       language: generic
@@ -75,8 +73,6 @@ before_install:
         xfonts-cyrillic fluid-soundfont-gm musescore-soundfont-gm
     fi
 install:
-  - "python .travis_osx_upload_whl.py --write-config"
-  - $(set | grep PYPI_ | python -c "import sys;print('\n'.join(['unset %s' % l.split('=')[0] for l in sys.stdin.readlines() if l.startswith('PYPI')]))")
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source .travis_osx.sh; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then PYTHON_EXE=python PIP_CMD=pip; fi
   - "$PIP_CMD install --upgrade setuptools pip"
@@ -84,6 +80,7 @@ install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then $PIP_CMD install delocate twine; fi
   - "$PYTHON_EXE config.py -auto"
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then $PYTHON_EXE setup.py install -noheaders; fi
+  - if [[ "$UPLOAD_SDIST" == "1" ]]; then $PYTHON_EXE setup.py sdist; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source .travis_osx_install.sh; fi
 env:
   global:
@@ -96,6 +93,7 @@ script:
   - $PYTHON_EXE -m pygame.tests.__main__ --exclude opengl --time_out 300
 
 after_success:
+  - $PYTHON_EXE .travis_osx_update_dev_version.py
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source .travis_osx_after_success.sh; fi
 
 after_script:
